tests/macros/trybuild/stack_incompatible_block_dimensions.stderr
error[E0277]: the trait bound `ShapeConstraint: DimEq<Const<2>, Const<3>>` is not satisfied
  --> tests/macros/trybuild/stack_incompatible_block_dimensions.rs:12:12
   |
12 |            a21, a22];
   |            ^^^ the trait `DimEq<Const<2>, Const<3>>` is not implemented for `ShapeConstraint`
   |
   = help: the following other types implement trait `DimEq<D1, D2>`:
             <ShapeConstraint as DimEq<Dyn, D>>
             <ShapeConstraint as DimEq<D, Dyn>>
             <ShapeConstraint as DimEq<D, D>>
   = note: this error originates in the macro `stack` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0282]: type annotations needed
  --> tests/macros/trybuild/stack_incompatible_block_dimensions.rs:11:5
   |
11 | /     stack![a11, a12;
12 | |            a21, a22];
   | |____________________^ cannot infer type
   |
   = note: this error originates in the macro `stack` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `generic_view_mut` found for struct `Matrix<_, Const<3>, _, _>` in the current scope
  --> tests/macros/trybuild/stack_incompatible_block_dimensions.rs:11:5
   |
11 |       stack![a11, a12;
   |  _____^
12 | |            a21, a22];
   | |____________________^ method not found in `Matrix<_, Const<3>, _, _>`
   |
  ::: src/base/matrix_view.rs
   |
   |        generic_slice_mut => generic_view_mut,
   |                             ---------------- the method is available for `Matrix<_, Const<3>, _, _>` here
   |
   = note: the method was found for
           - `Matrix<T, R, C, S>`
   = note: this error originates in the macro `stack` (in Nightly builds, run with -Z macro-backtrace for more info)
